--- a/Themes/Translucence/css/source.css
+++ b/Themes/Translucence/css/source.css
@@ -1,5 +1,5 @@
 :root {
-  --app-bg: url(https://i.imgur.com/U8bSjj5.jpg);
+  --app-bg: url(https://i.pinimg.com/originals/f1/63/11/f16311fd0c32786525f471c685bc516e.gif);
   --app-blur: 6px;
   --app-margin: 24px;
   --app-radius: 8px;
