--- a/Themes/Translucence/css/source.css
+++ b/Themes/Translucence/css/source.css
@@ -1,5 +1,5 @@
 :root {
-  --app-bg: url(https://i.imgur.com/U8bSjj5.jpg);
+  --app-bg: url(https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77700725123.jpg);
   --app-blur: 6px;
   --app-margin: 24px;
   --app-radius: 8px;
